--- a/app/src/app/pages/conductor/conductor.component.html
+++ b/app/src/app/pages/conductor/conductor.component.html
@@ -72,25 +72,42 @@
               formControlName="email">
           </div>
 
-          
           <div class="form-group col-md-3 col-lg-3">
-            <label for="SelectFormConductor">Giro</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              formControlName="giro">
+            <label for="inputPuerto">Transportista</label>
+            <select 
+            class="form-select" 
+            formControlName="propietario_id">
+              <option  [value]="0" >Seleccione Transportista</option>
+              <option 
+              *ngFor="let item of proveedores"
+              [value]="item.conductor_id">{{item.nombre}}</option>
+            </select>
           </div>
 
-          <div class="form-group col-md-3 col-lg-3">
-            <br>
-          <button *ngIf="ocultarRegistro" type="submit" class="btn btn-success" >Guardar</button>
-          <div  *ngIf="ocultarEditar">
-          <button  type="button" (click)="updateConductor()" class="btn btn-primary" >Editar</button>
-          &nbsp;
-          <button  type="button" (click)="cancelUpdate()"  class="btn btn-danger">Cancelar</button>
-          </div>
+
+      
+    
           </div>
 
+          <div class="row">
+
+            <div class="form-group col-md-6 col-lg-6">
+              <label for="SelectFormCliente">Imagen</label>
+              <input 
+              (change)="getFile($event)"
+              type="file" 
+              class="form-control">
+            </div>
+            
+            <div class="form-group col-md-3 col-lg-3">
+              <br>
+            <button *ngIf="ocultarRegistro" type="submit" class="btn btn-success" >Guardar</button>
+            <div  *ngIf="ocultarEditar">
+            <button  type="button" (click)="updateConductor()" class="btn btn-primary" >Editar</button>
+            &nbsp;
+            <button  type="button" (click)="cancelUpdate()"  class="btn btn-danger">Cancelar</button>
+            </div>
+            </div>
           </div>
 
         </form>
@@ -104,43 +121,51 @@
       <div class="card mb-4">
           <div class="card-header">
               <i class="fas fa-table me-1"></i>
-             Clientes
+             Conductores
           </div>
           
           <div class="card-body">
               <br>
-            <table class="table table-bordered">
-                  <thead>
-                      <tr>
-                          <th  scope="col">Nombre</th>
-                          <th  scope="col">rut</th>
-                          <th  scope="col">giro</th>
-                          <th  scope="col">fono</th>
-                          <th  scope="col">email</th>
-                          <th  scope="col">Acciones</th>
-                      </tr>
-                  </thead>
-                  
-                  <tbody>
-                      <tr *ngFor="let item of conductores | paginate:{itemsPerPage: 5, currentPage: p}">
-                          <td>{{item.nombre_completo}}</td>
-                          <td>{{item.rut}}</td>
-                          <td>{{item.fono}}</td>
-                          <td>{{item.email}}</td>
-                          <td>{{item.giro}}</td>
-                          <td>
+          
+              <div *ngFor="let item of conductores | paginate:{itemsPerPage: 5, currentPage: p}"  class="list-group-item list-group-item-action" aria-current="true">
+
+                <div class="card md-12" >
+                  <div class="row g-0">
+  
+                    <div class="col-md-4">
+                      <div class="card-body">
+                      <img [src]="item.imagen" class="img-fluid img-thumbnail" width="350" height="250">
+                    </div>
+                    </div>
+  
+                    <div class="col-md-4">
+                      <div class="card-body">
+                      <h5 class="card-title">Transportista:</h5>
+                      <h5 class="card-title">Vehiculo:</h5>
+  
+                    </div>
+                    </div>
+  
+                    <div class="col-md-4">
+                      <div class="card-body">
+                        <h5 class="card-title">Nombre:    {{item.nombre_completo}}</h5>
+                        <h5 class="card-title">Rut:       {{item.rut}}</h5>
+                        <h5 class="card-title">Fono:    {{item.fono}}</h5>
+                        <h5 class="card-title">Email:     {{item.email}}</h5>
+                        
+                        <p class="card-text">
+                          <small class="text-muted">
                             <div 
                             class="btn-group" 
                             role="group" aria-label="Button group with nested dropdown">
-
-                       
+        
                             <button 
                             (click)="getDataDrive(item)"
                             data-bs-toggle="tooltip" 
                             data-bs-placement="top"
                             title="Editar"
                             type="button" 
-                            class="btn btn-primary"
+                            class="btn btn-primary btn-sm"
                             ><i class="fa-solid fa-pen-to-square"></i></button>
                             
                             <button 
@@ -149,13 +174,20 @@
                             data-bs-placement="top"
                             title="Eliminar"
                             type="button" 
-                            class="btn btn-danger"
+                            class="btn btn-danger btn-sm"
                             ><i class="fa-solid fa-eraser"></i></button>
-                          </div></td>
-                      </tr>
-
-                  </tbody>
-              </table>
+                          </div>
+  
+                          </small></p>
+                      </div>
+                    </div>
+  
+  
+                  </div>
+                </div>
+  
+              </div>
+                <br>
               <pagination-controls (pageChange)="p = $event"
               previousLabel="Anterior"
               nextLabel="Siguiente"></pagination-controls>
